--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     }
   ],
   "repository": "git://github.com/rigelfe/dep-tangram",
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "devDependencies": {
+		"grunt": "~0.4.1",
+		"grunt-contrib-uglify": "~0.2.2",
+		"grunt-contrib-clean": "~0.4.1",
+		"grunt-zip": "~0.9.2"
+  }
 }
